--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "viu"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
 edition = "2018"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/atanunq/viu"
 description = "View images right from the terminal."
+exclude = ["img/*"]
 
 [dependencies]
 libc = "0.2"
