--- a/wapm.toml
+++ b/wapm.toml
@@ -1,8 +1,8 @@
 [package]
 name = "viu"
-version = "0.1.1"
+version = "0.2.1"
 description = "A small command-line application to view images from the terminal"
-readme = "WASI-README.md"
+readme = "README.md"
 repository = "https://github.com/wapm-packages/viu"
 
 [[module]]
