--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/atanunq/viu"
 description = "View images right from the terminal."
+categories = ["command-line-utilities"]
+keywords = ["terminal", "image", "gif"]
 exclude = ["img/*"]
 
 [dependencies]
