--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = "2.33.0"
 termcolor = "1.1"
 gif = "0.10.3"
 crossterm = { version= "0.16" }
+ansi_colours = "1.0"
 
 [target.'cfg(target_os = "wasi")'.dependencies]
 image = { version = "0.22.3", default-features = false, features = ["gif_codec", "jpeg", "ico", "jpeg-decoder", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
