--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ exclude = ["img/*"]
 
 [dependencies]
 clap = "2.33"
-crossterm = "0.17"
-viuer = "0.1"
+crossterm = "0.18"
+viuer = { path = "../viuer" }
 
 [target.'cfg(target_os = "wasi")'.dependencies]
 image = { version = "0.22.3", default-features = false, features = ["gif_codec", "jpeg", "ico", "jpeg-decoder", "png_codec", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
