--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ crossterm = "0.27"
 viuer = "0.7.1"
 ctrlc = { version = "3.4", features = ["termination"] }
 image = "0.24"
+gethostname = "0.4"
+bytes = "1.6"
 
 [features]
 default = []
