--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,12 @@ exclude = ["/img", "/.github"]
 
 [dependencies]
 clap = { version = "4.4", features = ["cargo"] }
-crossterm = { version = "0.28", default-features = false }
-viuer = { version = "0.9", features = ["print-file"] }
+crossterm = { version = "0.29", default-features = false }
+viuer = { version = "0.11", features = ["print-file"] }
 ctrlc = { version = "3.4", features = ["termination"] }
 image = "0.25"
 
 [features]
 default = []
 sixel = ["viuer/sixel"]
+icy_sixel = ["viuer/icy_sixel"]
